--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>HistoryOfEsfiomi</title>
+    <title>Uploaded Fairy Channel</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
       body {
