--- a/index.html
+++ b/index.html
@@ -117,20 +117,19 @@
 
     <div class="container">
        <div class="mySlides">
-         <iframe allowfullscreen src="https://www.vidlii.com/embed?v=kEFDt4YflwY&a=1" frameborder="0" width="640" height="360"></iframe>
+         <iframe width="560" height="315" sandbox="allow-same-origin allow-scripts allow-popups" title="Uploaded Fairy Hemato&#39;s Story Prologue" src="https://video.ploud.jp/videos/embed/f625b60c-e52d-4e9b-925c-48c2fef54600" frameborder="0" allowfullscreen></iframe>
        </div>
-       </div>
+     </div>
 
-       <a class="prev" onclick="plusSlides(1)">❮</a>
-       <a class="next" onclick="plusSlides(-1)">❯</a>
+     <a class="prev" onclick="plusSlides(1)">❮</a>
+     <a class="next" onclick="plusSlides(-1)">❯</a>
 
-       <h3>VIDEOS</h3><br />
-       <div class="row">
-         <div class="column">
-           <img width="320px" height="160px" class="demo cursor" src="https://github.com/LWFlouisa/UploadedFairyChannel/blob/main/videos/thecomicsformigrewtohate.jpg?raw=true" type="video/mp4" style="width:100%" onclick="currentSlide(1)" alt="The Comics Form I Grew To Hate">
-         </div>
+     <h3>VIDEOS</h3><br />
+     <div class="row">
+       <div class="column">
+         <img width="320px" height="160px" class="demo cursor" src="https://github.com/LWFlouisa/UploadedFairyChannel/blob/main/videos/thecomicsformigrewtohate.jpg?raw=true" type="video/mp4" style="width:100%" onclick="currentSlide(1)" alt="The Comics Form I Grew To Hate">
        </div>
-    </div>
+     </div>
     </center>
 
 <script>
