--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
      <h3>VIDEOS</h3><br />
      <div class="row">
        <div class="column">
-         <img width="320px" height="160px" class="demo cursor" src="https://github.com/LWFlouisa/UploadedFairyChannel/blob/main/videos/thecomicsformigrewtohate.jpg?raw=true" type="video/mp4" style="width:100%" onclick="currentSlide(1)" alt="The Comics Form I Grew To Hate">
+         <img width="320px" height="160px" class="demo cursor" src="https://github.com/LWFlouisa/UploadedFairyChannel/blob/main/videos/uploadedfairy_P0.png?raw=true" type="video/mp4" style="width:100%" onclick="currentSlide(1)" alt="The Comics Form I Grew To Hate">
        </div>
      </div>
     </center>
