--- a/index.html
+++ b/index.html
@@ -119,6 +119,10 @@
        <div class="mySlides">
          <iframe width="560" height="315" sandbox="allow-same-origin allow-scripts allow-popups" title="Uploaded Fairy Hemato&#39;s Story Prologue" src="https://video.ploud.jp/videos/embed/f625b60c-e52d-4e9b-925c-48c2fef54600" frameborder="0" allowfullscreen></iframe>
        </div>
+      
+       <div class="mySlides">
+         <iframe width="560" height="315" sandbox="allow-same-origin allow-scripts allow-popups" title="Uploaded Fairy Hemato&#39;s Story Chapter 1" src="https://video.ploud.jp/videos/embed/5ac84def-2ac9-4bc5-987a-2ffa402a5592" frameborder="0" allowfullscreen></iframe>
+       </div>
      </div>
 
      <a class="prev" onclick="plusSlides(1)">❮</a>
@@ -126,6 +130,10 @@
 
      <h3>VIDEOS</h3><br />
      <div class="row">
+       <div class="column">
+         <img width="320px" height="160px" class="demo cursor" src="https://github.com/LWFlouisa/UploadedFairyChannel/blob/main/videos/uploadedfairy_P0.png?raw=true" type="video/mp4" style="width:100%" onclick="currentSlide(1)" alt="The Comics Form I Grew To Hate">
+       </div>
+       
        <div class="column">
          <img width="320px" height="160px" class="demo cursor" src="https://github.com/LWFlouisa/UploadedFairyChannel/blob/main/videos/uploadedfairy_P0.png?raw=true" type="video/mp4" style="width:100%" onclick="currentSlide(1)" alt="The Comics Form I Grew To Hate">
        </div>
