--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
       body {
-        background-image: url("https://github.com/LWFlouisa/videos/blob/main/images/youtuberose.png?raw=true");
+        background-color: #151515;
 
         font-family: Arial;
         margin: 0;
